--- a/Web/main.css
+++ b/Web/main.css
@@ -241,7 +241,7 @@ p{
 	margin-right: auto;
 }
 
-.registration .input{
+.input{
 	display: block;
 	background: transparent; 
 	padding: 10px;
@@ -325,7 +325,7 @@ input[type=checkbox]{
 	color: #888;
 }
 
-/*----------------Confirmation ------------------*/
+/*---------------- Confirmation ------------------*/
 
 .registration #result{
 	display: block;
@@ -352,4 +352,93 @@ input[type=checkbox]{
 	height: 100px;
 	font-size: 0.8rem;
 	text-align: left;
+}
+/*---------------- Admin ------------------*/
+.order{
+	display: table;
+	width: 1024px;
+	height: 30px;
+	margin-left: 20px;
+	margin-right: 20px;
+	margin-top: 11px;
+	margin-bottom: 5px;
+
+	border-style: solid;
+	border-color: #AAA;
+	border-radius: 6px;
+	border-width: 1px;
+	transition: height 2s;
+}
+
+.order:hover{
+	background-color: #EEE;
+    height: 150px;
+}
+
+.order:hover .item[id="pickup"]{
+	text-align: left;
+	display: inline-block;
+	visibility: visible;
+	margin: 10px;
+	transition: display 2s;
+	transition-delay: 2s;
+}
+.order:hover .item[id="delivery"]{
+	text-align: left;
+	display: inline-block;
+	visibility: visible;
+	margin: 10px;
+	transition: display 2s;
+	transition-delay: 2s;
+}
+
+.item{
+	display: inline-block;
+	width: 170px;
+	text-align: center;
+}
+
+.item[id="pickup"]{
+	display: none;
+	width: 450px;
+	visibility: collapse;
+	height: 0px;
+}
+
+.item[id="delivery"]{
+	display: none;
+	width: 450px;
+	visibility: collapse;
+	height: 0px;
+}
+#buttonCancell{
+	font-size: 16px;
+	font-weight: 200;
+	background: #FF7575;
+	color: white;
+	padding: auto;
+	height: 24px;
+	padding: 5px;
+	margin-right: auto;
+	width: 75px;
+}
+
+#buttonCancell:hover{
+	background-color: #CD0000;
+}
+
+#buttonDone{
+	font-size: 16px;
+	font-weight: 200;
+	background: #00ff72;
+	color: white;
+	padding: auto;
+	height: 24px;
+	padding: 5px;
+	margin-right: 0px;
+	width: 75px;
+}
+
+#buttonDone:hover{
+	background-color: #00dc62;
 }
